<resources>
    <string name="app_name">WorkHub</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="workhub_name">WorkHub</string>
    <string name="no_network">无法访问网络</string>
    <string name="network_exception">数据获取异常</string>
    <string name="onclick_more">再按一次退出</string>
    <string name="login_name">用户名</string>
    <string name="my_password">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="other_way">其他方式</string>
    <string name="loading">正在加载...</string>
    <string name="toast_login_name_null">用户名输入为空，请重新输入</string>
    <string name="toast_pass_word_not_safe">密码安全性不高</string>
    <string name="toast_pass_word_null">密码输入为空，请重新输入</string>
    <string name="toast_pass_cantsame">旧密码和新密码不能一样</string>
    <string name="reserved">Coypright © 2016 mintcode, Inc. All Rights Reserved</string>
    <string name="try_apply">试用版申请</string>
    <string name="create_team">创建团队</string>
    <string name="team_name">输入团队名称</string>
    <string name="team_net">输入团队域名</string>
    <string name="team_create_name">输入姓名</string>
    <string name="next">下一步</string>
    <string name="team_check_info">确认信息</string>
    <string name="team_address">团队地址</string>
    <string name="team_name_info">团队名称</string>
    <string name="phone_sign">手机注册</string>
    <string name="mail_sign">邮箱注册</string>
    <string name="nation_local">国家地区</string>
    <string name="password_setting">设置登录密码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="sign_success">注册成功！</string>
    <string name="comany_isexist">公司已存在</string>
    <string name="is_exist">已被注册</string>
    <string name="just_login">直接登陆</string>
    <string name="change_mail">修改邮箱</string>
    <string name="i_am_agree">我已阅读并同意相关</string>
    <string name="service_item">相关服务条款</string>
    <string name="privacy_item">隐私政策</string>
    <string name="i_am_agree_service_privacy">我已阅读并同意相关服务条款和隐私政策</string>
    <string name="get_mail_info">同意接收运营邮件</string>
    <string name="main_message">消息</string>
    <string name="main_contact">通讯录</string>
    <string name="main_app">应用</string>
    <string name="main_more">其他</string>
    <string name="app_task">任务</string>
    <string name="app_record">记录</string>
    <string name="app_schedule">日程</string>
    <string name="app_meetting">会议</string>
    <string name="app_apply">申请</string>
    <string name="app_task_notify">任务通知</string>
    <string name="app_schedule_notify">日程通知</string>
    <string name="app_apply_notify">审批通知</string>
    <string name="meeting_new">新建会议</string>
    <string name="meeting_time_cancel">取消</string>
    <string name="cancel">取消</string>
    <string name="cancel_meeting">取消理由</string>
    <string name="meeting_inner">内部会议</string>
    <string name="meeting_out">外部会议</string>
    <string name="meeting_have_to">必须出席</string>
    <string name="meeting_choose">选择出席</string>
    <string name="is_all_day">全天</string>
    <string name="select_time_meeting_room">会议时间和地点</string>
    <string name="is_repeat">重复</string>
    <string name="is_notice">提醒</string>
    <string name="title">标题</string>
    <string name="remark">备注</string>
    <string name="star_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="meeting_time_hint">*此时间段中有%1$d名成员已有其他事件安排</string>
    <string name="meeting_preview">冲突事件详情</string>
    <string name="meeting_room_choose">会议室的选择</string>
    <string name="meeting_place_man">会议室以外的地方</string>
    <string name="meeting_out_of_room">会议室以外的地方</string>
    <string name="meeting_confirm">会议详情</string>
    <string name="meeting_attend">参加</string>
    <string name="meeting_no_attend">不参加</string>
    <string name="places_or_address">输入名称或者地址</string>
    <string name="confirm">确定</string>
    <string name="room_empty">会议室为空,请选择</string>
    <string name="title_empty">标题为空,请填写</string>
    <string name="add_meeting_member_empty">必须参会人员为空,请选择</string>
    <string name="who_schedule">的日程</string>
    <string name="end_time_must_not_be_later_than_begin_time">结束时间必须晚于开始时间</string>
    <string name="begin_time_must_not_be_later_than_current_time">开始时间必须晚于当前时间</string>
    <string name="contorl_meeting_del">是否取消该会议</string>
    <string name="del">删除</string>
    <string name="del_custom">仅删除此会议</string>
    <string name="del_all">删除将来所有会议</string>
    <string name="choose_hint">请选择会议室</string>
    <string name="project_empty">请选择任务所属项目</string>
    <string name="final_time_empty">截止时间未选择</string>
    <string name="meeting_enter_people">请输入出席人员</string>
    <string name="version_num">2.4</string>
    <string name="calendar_order">事件</string>
	<string name="impt_msg">重点</string>
	<string name="file_msg">文件</string>
	<string name="pic_msg">图片</string>
	<string name="app_msg">应用</string>
    <string name="send_to_me">\&#064;我</string>
    <string name="organization">组织架构</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入搜索条件</string>
    <string name="selected_dept">按部门</string>
    <string name="selected_name">按名字</string>
    <string name="search_user">&#160;字样的用户</string>
    <string name="search_dept">&#160;字样的部门</string>
    <string name="search_in">包含&#160;</string>
    <string name="launchr_id">Launchr ID</string>
    <string name="workhub_id">WorkHub ID</string>
    <string name="my_phone_is_null">手机号输入为空</string>
    <string name="my_phone_is_error">手机号格式错误</string>
    <string name="my_phone_is_success">手机号修改成功</string>
    <string name="my_tele_is_null">电话输入为空</string>
    <string name="my_tele_is_error">电话格式错误</string>
    <string name="my_tele_is_success">电话修改成功</string>
    <string name="my_colleague_circle">姓名</string>
    <string name="my_album">手机</string>
    <string name="my_collection">邮箱</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="my_comment">办公电话</string>
    <string name="virtrual_num">虚拟号</string>
    <string name="my_dept">部门</string>
    <string name="my_job">职位</string>
    <string name="my_my_team">我的团队</string>
    <string name="my_calling_card">二维码名片</string>
    <string name="my_share">分享</string>
    <string name="my_setting">设置</string>
    <string name="my_phone">手机</string>
    <string name="message_order">消息通知</string>
    <string name="my_change_password">修改密码</string>
    <string name="my_change_gesture_password">修改手势密码</string>
    <string name="sound">声音</string>
    <string name="vibration">振动</string>
    <string name="clear_cache">清除缓存</string>
    <string name="bind_mobile">绑定手机号码</string>
    <string name="modify_gesure_password">修改手势密码</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_hint">请在此输入反馈内容</string>
    <string name="feed_back_empty">反馈内容为空</string>
    <string name="feed_back_content">输入反馈内容</string>
    <string name="feed_back_title">输入反馈标题</string>
    <string name="feed_back_recode">反馈记录</string>
    <string name="feed_back_thank">谢谢您的反馈,我们将尽快处理</string>
    <string name="about_software">关于软件</string>
    <string name="language">多语言</string>
    <string name="about_us">关于我们</string>
    <string name="sign_out">退出当前账号</string>
    <string name="contact_organization">组织架构</string>
    <string name="contact_mySector">我的部门</string>
    <string name="contact_favorite">收藏</string>
    <string name="favorited">已收藏</string>
    <string name="contact_group">已有群</string>
    <string name="contact_recent">最近联系人</string>
    <string name="set_pattern_pwd">设置手势密码</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="forget_gesture_then_login_again">忘记手势密码</string>
    <string name="logout_message">当前账号已在其他设备上登录</string>
    <string name="gesture_login_again">重新登录</string>
    <string name="gesture_cancel">取消</string>
    <string name="skip">跳过</string>
    <string name="inout_to_phone">导出到手机</string>
    <string name="send_msg">发消息</string>
    <string name="add_to_favorite">收藏联系人</string>
    <string name="my_tel">固定电话</string>
    <string name="dummy_net">虚拟网</string>
    <string name="my_email_address">邮箱</string>
    <string name="my_department">部门</string>
    <string name="department">科室</string>
    <string name="my_position">职位</string>
    <string name="my_null_setting">未设置</string>
    <string name="unlock_gesture_success">解锁成功</string>
    <string name="sbumit_choose_time">确定此时间为候补时间</string>
    <string name="comeback_myschedule">回我的日程</string>
    <string name="new_meeting">新建会议</string>
    <string name="new_event">新建事件</string>
    <string name="see_other_shedule">查看他人日程</string>
    <string name="google_shedule">同步谷歌日历</string>
    <string name="time_hour">时</string>
    <string name="no_event">无事件</string>
    <string name="event_duration_day">%1$d天</string>
    <string name="event_duration_hour">%1$d小时</string>
    <string name="event_duration_minute">%1$d分钟</string>
    <string name="caleandar_year">年</string>
    <string name="caleandar_month">月</string>
    <string name="calendar_sunday">日</string>
    <string name="calendar_mongday">一</string>
    <string name="calendar_tuesday">二</string>
    <string name="calendar_wednesday">三</string>
    <string name="calendar_thursday">四</string>
    <string name="calendar_friday">五</string>
    <string name="calendar_saturday">六</string>
    <string name="calendar_confirmOrder">事件详情</string>
    <string name="calendar_edit">编辑</string>
    <string name="calendar_takeoutcertificate">领取盖有公章的证明书</string>
    <string name="calendar_wholeday">整天</string>
    <string name="calendar_alternate1">时间1</string>
    <string name="calendar_alternate2">时间2</string>
    <string name="calendar_alternate3">时间3</string>
    <string name="calendar_canel">取消</string>
    <string name="task_pop_edit_subtask">编辑子任务</string>
    <string name="task_pop_delect_subtask">删除子任务</string>
    <string name="task_pop_change_subtask">转化为父任务</string>
    <string name="save">保存</string>
    <string name="my_change_number">验证码</string>
    <string name="my_change_get_number">获取验证码</string>
    <string name="my_change_password_new">新密码</string>
    <string name="message_new_chat">新建聊天</string>
    <string name="message_scan">扫一扫</string>
    <string name="message_new_task">新建任务</string>
    <string name="message_new_schedule">新建日程</string>
    <string name="select_place">选择场所</string>
    <string name="place">位置</string>
    <string name="current_place">当前位置</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone_mail_hit">输入邮箱账号</string>
    <string name="input_identify">输入验证码</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="phone_back">手机找回</string>
    <string name="right_and_login">确认并登录</string>
    <string name="input_new_password">输入新密码</string>
</resources>