<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_message_menu"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:visibility="gone"
        android:background="@color/divider_gray" />

    <TextView
        android:id="@+id/tv_new_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_new_chat"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:text="@string/message_new_chat"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray" />

    <TextView
        android:id="@+id/tv_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_new_scan"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:text="@string/message_scan"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view_line_task"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray" />

    <TextView
        android:id="@+id/tv_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_new_task"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:text="@string/message_new_task"
        android:textColor="@color/black" />

    <View
        android:id="@+id/view_line_schedule"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray" />

    <TextView
        android:id="@+id/tv_new_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_new_schedule"
        android:drawablePadding="10dp"
        android:padding="15dp"
        android:text="@string/message_new_schedule"
        android:textColor="@color/black" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:visibility="gone"
        android:background="@color/divider_gray" />
</LinearLayout>