<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:id="@+id/ll_phone_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/ll_select_nation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/white"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/chat_below_text"
                android:text="@string/nation_local"
                />

            <TextView
                android:id="@+id/tv_nation_local"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="中国大陆"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@null"
                android:singleLine="true"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_right_on"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/white"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/chat_below_text"
                android:text="@string/phone_number"
                />

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_phone"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:background="@null"
                android:singleLine="true"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_mail_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/chat_below_text"
            android:text="@string/my_collection"
            />

        <EditText
            android:id="@+id/edt_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_phone_mail_hit"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@null"
            android:singleLine="true"
            />
    </LinearLayout>
</LinearLayout>