<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView 
        android:id="@+id/iv_popwindow_tran"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000" 
        android:layout_above="@+id/ll_popwindow_null"
        />
    <LinearLayout  
        android:id="@+id/ll_popwindow_null" 
        android:layout_above="@+id/iv_popwindow_null"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:padding="5dp"     
        android:background="#00000000"
        >
    <LinearLayout              
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"              
        android:orientation="vertical" 
        android:background="@drawable/popwindow_border"
        >
     <TextView 
        android:id="@+id/tv_popwindow_task_frist"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/task_pop_edit_subtask"
        android:textSize="15sp"
        android:textColor="@color/black"
        />
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_bar_launchr"
        />
    <TextView 
        android:id="@+id/tv_popwindow_task_seconed"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/task_pop_delect_subtask"
        android:textSize="15sp"
        android:textColor="@color/black"
        />
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_bar_launchr"
        />
    <TextView
        android:id="@+id/tv_popwindow_task_third" 
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/task_pop_change_subtask"
        android:textSize="15sp"
        android:textColor="@color/black"
        />     
 	</LinearLayout>
  </LinearLayout>
 <TextView 
     android:id="@+id/iv_popwindow_null"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:layout_marginTop="5dp"
     android:background="@drawable/popwindow_border"
     android:text="@string/calendar_canel"
     android:textSize="15sp"
     android:gravity="center"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp" 
     android:layout_marginBottom="5dp"   
     android:layout_alignParentBottom="true"
     android:textColor="@color/blue_launchr"
     />
</RelativeLayout>
