<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="50dp"
            >
            <TextView android:text="@string/select_place"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView android:text="@string/cancel"
                android:textSize="15sp"
                android:textColor="@color/blue_launchr"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingRight="10dp"
                android:id="@+id/tv_back"
                android:layout_height="match_parent"/>

            <TextView android:text="@string/save"
                android:textSize="15sp"
                android:textColor="@color/blue_launchr"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:id="@+id/tv_save"
                android:layout_height="match_parent"/>

        </RelativeLayout>
        <ImageView android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_gray">

        <RelativeLayout android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="43dp">
            <RadioGroup android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/rbtn_inner_meeting"
                    android:layout_width="@dimen/meeting_rbtn_width"
                    android:layout_height="@dimen/meeting_rbtn_height"
                    android:background="@drawable/rbtn_left_bg"
                    android:button="@null"
                    android:checked="true"
                    android:text="@string/meeting_inner"
                    android:textColor="@color/rbtn_text_color"
                    android:textSize="@dimen/meeting_rbtn_text_size"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    />

                <RadioButton android:id="@+id/rbtn_out_meeting"
                    android:layout_width="@dimen/meeting_rbtn_width"
                    android:layout_height="@dimen/meeting_rbtn_height"
                    android:background="@drawable/rbtn_right_bg"
                    android:button="@null"
                    android:textColor="@color/rbtn_text_color"
                    android:text="@string/meeting_out"
                    android:textSize="@dimen/meeting_rbtn_text_size"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    />

            </RadioGroup>

        </RelativeLayout>
        <ImageView android:layout_width="match_parent"
            android:layout_height="1px"
            android:visibility="gone"
            android:background="@color/line_color"/>

        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/meeting_item_height"
                android:background="@color/white"
                android:hint="@string/places_or_address"
                android:textSize="@dimen/meeting_text_size"
                android:layout_marginTop="@dimen/meeting_margin_top"
                android:paddingLeft="15dp"
                android:textColor="@color/black"
                android:id="@+id/et_search"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:imeOptions="actionSearch"
                android:maxEms="100"
                />

            <TextView android:id="@+id/tv_clear"
                android:background="@drawable/white_bg_selected"
                android:layout_width="40dp"
                android:layout_height="@dimen/meeting_item_height"
                android:layout_marginTop="@dimen/meeting_margin_top"
                android:layout_alignParentRight="true"
                android:text="x"
                android:gravity="center"
                />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_current_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_place"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawableLeft="@drawable/event_place"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:paddingLeft="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="16sp"
                android:textColor="@color/chat_below_text"
                android:background="@color/bg_approve"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lv_baidu_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">
        </ListView>
    </LinearLayout>
</LinearLayout>
